--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ googleAnalytics = "G-WG01CH0XM7"
     title = "Volcano Lair"
     subtitle = "We Make Games"
     keywords = ""
-    copyright = '&copy; 2016-2022 Volcano Lair LLC'
+    copyright = '&copy; 2016-2022 Volcano Lair'
     readOtherPosts = "Read other posts"
 
     [languages.en.params.logo]
