--- a/config.toml
+++ b/config.toml
@@ -46,8 +46,8 @@ googleAnalytics = "G-WG01CH0XM7"
       copyright = "Volcano Lair LLC"
       privacy = "yes"
       terms = "yes"
-      streaming = "yes"
-      #discord = "yes"
+      # streaming = "yes"
+      # discord = "yes"
 
   # And you can even create generic menu
   [[menu.main]]
