--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ googleAnalytics = "G-WG01CH0XM7"
       privacy = "yes"
       terms = "yes"
       # streaming = "yes"
-      # discord = "yes"
+      discord = "yes"
 
   # And you can even create generic menu
   [[menu.main]]
