Removed forum link, added new blog post

--- a/config.toml
+++ b/config.toml
@@ -70,10 +70,10 @@ googleAnalytics = "G-WG01CH0XM7"
     name       = "Contact"
     url        = "/contact/"
 
-  [[menu.main]]
-	  identifier = "forums"
-    name       = "Forums"
-    url        = "https://forums.volcanolair.co"
+  #[[menu.main]]
+	#  identifier = "forums"
+  #  name       = "Forums"
+  #  url        = "https://forums.volcanolair.co"
 	
 [[params.social]]
  url = "//gamedev.social/@volcanolair"
