--- a/config.toml
+++ b/config.toml
@@ -88,3 +88,19 @@ disqusShortname = 'volcano-lair'
  url = "//twitter.com/thevolcanolair"
  name = "twitter"
  description = "Why would you want to follow us on Twitter"
+
+[markup]
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ''
+    hl_inline = false
+    lineAnchors = ''
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = true
+    noHl = false
+    style = 'monokai'
+    tabWidth = 4
